src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_comment.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=2, upvalues=1)
; constants:
;   K0 = "y"
;   K1 = "z"
;   K2 = 20000000.0
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [  1]  LOADI           R0 5
0002  [  3]  LOADI           R1 -6
0003  [  3]  SETTABUP        R1 U0 K0  ; "y"
0004  [  7]  LOAD            R1 K2  ; 20000000.0
0005  [  7]  SETTABUP        R1 U0 K1  ; "z"
0006  [  7]  RETURN          R0 count=1
