src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_const_fold_branch.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=1, upvalues=1)
; constants:
;   K0 = "a"
;   K1 = false
;   K2 = "b"
;   K3 = "c"
;   K4 = "d"
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [  5]  LOADI           R0 1
0002  [  5]  SETTABUP        R0 U0 K0  ; "a"
0003  [  8]  LOAD            R0 K1  ; false
0004  [  8]  JF              R0 +2
0005  [  9]  LOADI           R0 2
0006  [  9]  SETTABUP        R0 U0 K2  ; "b"
0007  [ 13]  LOADI           R0 5
0008  [ 13]  SETTABUP        R0 U0 K3  ; "c"
0009  [ 14]  LOADI           R0 7
0010  [ 14]  SETTABUP        R0 U0 K4  ; "d"
0011  [ 14]  RETURN          R0 count=1
