src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_const_local_multi_level.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=1, upvalues=1)
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [ 11]  CLOSURE         R0 P0
0002  [ 13]  RETURN          R0 count=2

; prototype 0:
  ; function (params=0, vararg=false, stack=1, upvalues=0)
  ; code:
  0000  [  9]  CLOSURE         R0 P0
  0001  [ 10]  RETURN1         R0

  ; prototype 0:
    ; function (params=0, vararg=false, stack=1, upvalues=0)
    ; code:
    0000  [  8]  LOADI           R0 8
    0001  [  8]  RETURN1         R0
