src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_const_local_no_fold.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=2, upvalues=1)
; constants:
;   K0 = "abc"
;   K1 = "b"
;   K2 = "c"
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [  6]  NEWTABLE        R0
0002  [  7]  LOAD            R1 K0  ; "abc"
0003  [  7]  LEN             R1 R1
0004  [  9]  SETTABUP        R0 U0 K1  ; "b"
0005  [ 10]  SETTABUP        R1 U0 K2  ; "c"
0006  [ 10]  RETURN0
