src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_const_local_outer_fold.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=1, upvalues=1)
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [ 11]  CLOSURE         R0 P0
0002  [ 13]  RETURN          R0 count=2

; prototype 0:
  ; function (params=1, vararg=false, stack=4, upvalues=0)
  ; constants:
  ;   K0 = 6.28
  ; code:
  0000  [ 10]  LOADI           R1 8
  0001  [ 10]  LOAD            R2 K0  ; 6.28
  0002  [ 10]  MULI            R3 R0 #5 flipped
  0003  [ 10]  RETURN          R1 count=4
