src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_declare.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=9, upvalues=1)
; constants:
;   K0 = "x"
;   K1 = 5
;   K2 = 10
;   K3 = nil
;   K4 = "abs"
;   K5 = "i"
;   K6 = "k"
;   K7 = "get"
;   K8 = "other1"
;   K9 = "getf"
;   K10 = "other2"
;   K11 = "getw"
;   K12 = "getq"
;   K13 = "other4"
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [  1]  LOAD            R0 K1  ; 5
0002  [  1]  SETTABUP        R0 U0 K0  ; "x"
0003  [  2]  LOAD            R0 K2  ; 10
0004  [  3]  LOAD            R1 K3  ; nil
0005  [  3]  LOAD            R2 K3  ; nil
0006  [  5]  LOAD            R3 K4  ; "abs"
0007  [  5]  TBC             R3
0008  [  7]  GETTABUP        R4 U0 K7  ; "get"
0009  [  7]  CALL            R4 args=1 ret=2
0010  [  7]  LOAD            R5 K8  ; "other1"
0011  [  7]  SETTABUP        R5 U0 K6  ; "k"
0012  [  7]  SETTABUP        R4 U0 K5  ; "i"
0013  [  8]  GETTABUP        R4 U0 K9  ; "getf"
0014  [  8]  CALL            R4 args=1 ret=2
0015  [  8]  LOAD            R5 K10  ; "other2"
0016  [  9]  GETTABUP        R6 U0 K11  ; "getw"
0017  [  9]  CALL            R6 args=1 ret=2
0018  [ 10]  GETTABUP        R7 U0 K12  ; "getq"
0019  [ 10]  CALL            R7 args=1 ret=2
0020  [ 10]  LOAD            R8 K13  ; "other4"
0021  [ 10]  TBC             R7
0022  [ 10]  RETURN          R0 count=1
