src/compiler/snapshots/tcvm__compiler__snapshot_tests__compile_errnnil_runtime.snap
---
source: src/compiler/snapshot_tests.rs
expression: output
---
; function (params=0, vararg=true, stack=2, upvalues=1)
; constants:
;   K0 = "X"
; upvalues:
;   U0 = local R0
; code:
0000  [  1]  VARARGPREP      fixed=0
0001  [  1]  LOADI           R0 1
0002  [  1]  SETTABUP        R0 U0 K0  ; "X"
0003  [  2]  LOADI           R0 2
0004  [  2]  GETTABUP        R1 U0 K0  ; "X"
0005  [  2]  ERRNNIL         R1 name=K0
0006  [  2]  SETTABUP        R0 U0 K0  ; "X"
0007  [  2]  RETURN          R0 count=1
